# special-relativity-lessons

./: .gitignore  CLAUDE.md  Special relativity.qmd  _quarto.yml  astro.config.mjs  custom.scss  index.qmd  package-lock.json  package.json  pyproject.toml  style.css
.github/workflows/: publish.yml
chalkboard/: chalkboard-override.js  plugin.yml
images/: common.libjsonnet
images/1/light-clock-diagram.clgn/: collagen.jsonnet
images/1/light-clocks/: common.jsonnet  common.libjsonnet
images/1/light-clocks-2/light-clock-1/: script.js
images/1/light-clocks/light-clock-dynamic.clgn/: collagen.jsonnet
images/1/light-clocks/light-clock-static.clgn/: collagen.jsonnet
images/1/light-clocks/light-clocks-in-motion.clgn/: collagen.jsonnet
images/1/vector-example.clgn/: collagen.jsonnet
images/4/: train.py
images/5/: velocity_addition.jl
images/5/velo-add-1/: collagen.jsonnet
images/5/velo-add-2/: collagen.jsonnet
lessons/: lesson-0.qmd  lesson-1.qmd  lesson-2.qmd  lesson-3.1.qmd  lesson-3.2.qmd  lesson-3.qmd  lesson-4.qmd  lesson-5.qmd  lesson-6.qmd  lesson-7.qmd  lesson-8.qmd
lessons/future.jnPgYW/: lesson-1.qmd  lesson-2.qmd  lesson-3.qmd  lesson-5.qmd  lesson-6.qmd  lesson-7.qmd
src/components/: LightClock.astro  NumericInput.astro  NumericValue.astro  Slider.astro  Svg.astro
src/layouts/: Layout.astro
src/pages/lesson-1/: ComputationOfGamma.astro
src/pages/lesson-2/: ClockInMotion.astro  TrainInMotion.astro
src/pages/lesson-4/: SpacetimeDiagram.astro
src/pages/lesson-6/: SpacetimeDiagramLightCones.astro
src/scripts/: common.ts
(+2 files in other folders)
